# lab06-3

./: CMakeLists.txt  CPackConfig.cmake  README.md
.github/workflows/: cmake.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
